"Make single user -> object & data" is extremely(!) slow in Blender 3.1, compared to previous versions #96330

Closed
opened 2022-03-11 11:57:22 +01:00 by Christoph Werner · 12 comments

System Information
platform: 'Windows-10-10.0.19044-SP0'
renderer: 'NVIDIA GeForce RTX 3090/PCIe/SSE2'
version: '4.5.0 NVIDIA 511.79'

Broken in version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e, type: release
build date: 2022-03-09, 00:44:13

Worked: 3.0.1

Short description of error
The following issue happens in scenes with dozen thousands of objects.
When using menu Object -> Relations -> Make single user -> object & data Blender 3.1 needs extremely long time to create single user data of instanced objects.
In Blender 3.0.1 the same task just needs a few seconds.

Exact steps for others to reproduce the error
Please use the attached test .blend file.

  1. Select all objects.
  2. Go into the menu and activate Object -> Relations -> Make single user -> object & data

Blender needs a very long time to create single users in version 3.1.
The same task needs less than a 3rd of the time in Blender 3.0.1.

I'm working regularly with CAD data scenes that very often include more than 20-30k objects.
Why is this so slow now?

Regards
Chris

cw_make_lokal_bug.blend

**System Information** platform: 'Windows-10-10.0.19044-SP0' renderer: 'NVIDIA GeForce RTX 3090/PCIe/SSE2' version: '4.5.0 NVIDIA 511.79' Broken in version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e15, type: release build date: 2022-03-09, 00:44:13 Worked: 3.0.1 **Short description of error** The following issue happens in scenes with dozen thousands of objects. When using menu *Object -> Relations -> Make single user -> object & data* Blender 3.1 needs extremely long time to create single user data of instanced objects. In Blender 3.0.1 the same task just needs a few seconds. **Exact steps for others to reproduce the error** Please use the attached test .blend file. 1. Select all objects. 2. Go into the menu and activate *Object -> Relations -> Make single user -> object & data* Blender needs a very long time to create single users in version 3.1. The same task needs less than a 3rd of the time in Blender 3.0.1. I'm working regularly with CAD data scenes that very often include more than 20-30k objects. Why is this so slow now? Regards Chris [cw_make_lokal_bug.blend](https://archive.blender.org/developer/F12921026/cw_make_lokal_bug.blend)

Added subscriber: @ChristophWerner

Added subscriber: @ChristophWerner
Christoph Werner changed title from Using "Make single user -> object & data" is extremely(!) slow in Blender 3.1, compared to previous versions to "Make single user -> object & data" is extremely(!) slow in Blender 3.1, compared to previous versions 2022-03-11 11:57:38 +01:00

Added subscribers: @mont29, @mano-wii

Added subscribers: @mont29, @mano-wii

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

I can confirm.
The operation goes from about 15 seconds to 45 seconds using the attached file.
Regression was introduced in 43bc494892.
@mont29, is the performance penalty expected? Can this operation be optimized to something close to what it was before?

I can confirm. The operation goes from about 15 seconds to 45 seconds using the attached file. Regression was introduced in 43bc494892. @mont29, is the performance penalty expected? Can this operation be optimized to something close to what it was before?

Sorry for the unproductive comment guys, but I move back to Blender 3.0.1 because of the slowdown.
This issue is really annoying for my daylie work. I hope it will be fixed soon.

Sorry for the unproductive comment guys, but I move back to Blender 3.0.1 because of the slowdown. This issue is really annoying for my daylie work. I hope it will be fixed soon.

This code needs to be moved to new 'multiple' relink code committed yesterday, change almost ready here, will commit later today.

Note that the change will only be available in master/daily builds/future 3.2 release though.

This code needs to be moved to new 'multiple' relink code committed yesterday, change almost ready here, will commit later today. Note that the change will only be available in master/daily builds/future 3.2 release though.

In #96330#1324629, @mont29 wrote:
This code needs to be moved to new 'multiple' relink code committed yesterday, change almost ready here, will commit later today.

Note that the change will only be available in master/daily builds/future 3.2 release though.

Thank you. What a shame. Because we don't update "very often" to new Blender versions while running productions, I hoped to see this patch already in 3.1.1.
Will the new commited solution be faster then the previous ones?

> In #96330#1324629, @mont29 wrote: > This code needs to be moved to new 'multiple' relink code committed yesterday, change almost ready here, will commit later today. > > Note that the change will only be available in master/daily builds/future 3.2 release though. Thank you. What a shame. Because we don't update "very often" to new Blender versions while running productions, I hoped to see this patch already in 3.1.1. Will the new commited solution be faster then the previous ones?

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

This issue was referenced by 17906794f5

This issue was referenced by 17906794f555fb8452d677d7db576e78b7a115a6

Changing version during production is never really recommended... and backporting this change (and the ones it depends on) to 3.1 is a no-go, would be way too risky for a fix-only release.

Changing version during production is never really recommended... and backporting this change (and the ones it depends on) to 3.1 is a no-go, would be way too risky for a fix-only release.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-03-17 17:25:11 +01:00

In #96330#1324754, @mont29 wrote:
Changing version during production is never really recommended... and backporting this change (and the ones it depends on) to 3.1 is a no-go, would be way too risky for a fix-only release.

Indeed. So this patch seem to be "something bigger". No problem. I understand this and wait for 3.2.

Best wishes
Chris

> In #96330#1324754, @mont29 wrote: > Changing version during production is never really recommended... and backporting this change (and the ones it depends on) to 3.1 is a no-go, would be way too risky for a fix-only release. Indeed. So this patch seem to be "something bigger". No problem. I understand this and wait for 3.2. Best wishes Chris
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96330
No description provided.